Position Pass broken #92502

Closed
opened 2021-10-26 15:35:21 +02:00 by Steffen Dünner · 4 comments

System Information
Operating system: Linux-5.11.0-38-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-26 13:07, hash: b8b9023d8c
Worked: Master from a few hours ago

Short description of error
Position pass is no longer anti-aliased (which is great, thanks Brecht), but now gets rendered either much too dark in simple scene and totally "broken" in more complex setups.

Exact steps for others to reproduce the error

  • Open attached blend file:
    Position_Pass_Bug_v01.blend
  • Press F12 an check the position pass.
  • This is how it should look (apart from the anti-aliasing ;) ):
    Pos_Old.png
  • This is how it looks now:
    Pos_New.png

This now looks as if it was just much darker, but the problem goes further. Here's the same with a more "complex" setup:

  • Old master:
    Pos_Old_Complex.png
  • New master:
    Pos_New_Complex.png
**System Information** Operating system: Linux-5.11.0-38-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-26 13:07, hash: `b8b9023d8c` Worked: Master from a few hours ago **Short description of error** Position pass is no longer anti-aliased (which is great, thanks Brecht), but now gets rendered either much too dark in simple scene and totally "broken" in more complex setups. **Exact steps for others to reproduce the error** - Open attached blend file: [Position_Pass_Bug_v01.blend](https://archive.blender.org/developer/F11523538/Position_Pass_Bug_v01.blend) - Press F12 an check the position pass. - This is how it should look (apart from the anti-aliasing ;) ): ![Pos_Old.png](https://archive.blender.org/developer/F11523571/Pos_Old.png) - This is how it looks now: ![Pos_New.png](https://archive.blender.org/developer/F11523574/Pos_New.png) This now looks as if it was just much darker, but the problem goes further. Here's the same with a more "complex" setup: - Old master: ![Pos_Old_Complex.png](https://archive.blender.org/developer/F11523582/Pos_Old_Complex.png) - New master: ![Pos_New_Complex.png](https://archive.blender.org/developer/F11523588/Pos_New_Complex.png)

Added subscriber: @SteffenD

Added subscriber: @SteffenD

This issue was referenced by blender/cycles@b3965431fc

This issue was referenced by blender/cycles@b3965431fc7b1cd789ae96034ad7d18702365a0d

This issue was referenced by 4094868f73

This issue was referenced by 4094868f7301ed06e6fd0710d1e9193796eb857d

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sergey Sharybin self-assigned this 2021-10-26 16:06:50 +02:00
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#92502
No description provided.