Fix T92502: Position Pass broken

The kernel was writing it for the first sample only, while the film
accessor was thinking it needs to be filtered.